[gd_scene load_steps=8 format=3 uid="uid://bjf7wmor410ps"]

[ext_resource type="Script" path="res://Models/Menus/Overlays/base_overlay.gd" id="1_fxe44"]
[ext_resource type="PackedScene" uid="uid://co458jxngt4el" path="res://Models/Menus/Overlays/settings.tscn" id="2_3jbmj"]
[ext_resource type="Texture2D" uid="uid://cya3ku2ta4pme" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/coin_anim_f0.png" id="2_rfrb6"]
[ext_resource type="Script" path="res://Models/Menus/Overlays/player_display_container.gd" id="2_slhvk"]
[ext_resource type="PackedScene" uid="uid://mmi7n42qt3ph" path="res://Models/Menus/Overlays/player_data.tscn" id="3_446mo"]

[sub_resource type="Gradient" id="Gradient_ffifv"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_61714"]
gradient = SubResource("Gradient_ffifv")
width = 30
height = 30
fill_from = Vector2(1, 0)

[node name="BaseOverlay" type="Control" node_paths=PackedStringArray("player_status", "coin_counter", "mag_counter", "button_container", "settings_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fxe44")
player_status = NodePath("StatusOverlay/MarginContainer/PlayerContainer")
coin_counter = NodePath("ResourceDisplay/MarginContainer/GridContainer/CoinCount")
mag_counter = NodePath("ResourceDisplay/MarginContainer/GridContainer/MagCount")
button_container = NodePath("VBoxContainer/MenuButtons")
settings_menu = NodePath("Settings")

[node name="StatusOverlay" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 30.0
offset_top = 30.0
offset_right = 326.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="StatusOverlay"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PlayerContainer" type="VBoxContainer" parent="StatusOverlay/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("2_slhvk")
data_card_scene = ExtResource("3_446mo")

[node name="PlayerData" parent="StatusOverlay/MarginContainer/PlayerContainer" instance=ExtResource("3_446mo")]
visible = false
layout_mode = 2

[node name="ResourceDisplay" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 63.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="ResourceDisplay"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="ResourceDisplay/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 2

[node name="CoinSprite" type="TextureRect" parent="ResourceDisplay/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_rfrb6")
expand_mode = 3
stretch_mode = 5

[node name="CoinCount" type="Label" parent="ResourceDisplay/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MagSprite" type="TextureRect" parent="ResourceDisplay/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_rfrb6")
expand_mode = 3
stretch_mode = 5

[node name="MagCount" type="Label" parent="ResourceDisplay/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -311.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 2

[node name="FreecamButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "FreeCam ( )"
flat = true
alignment = 2

[node name="LogButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Log ()"
flat = true
alignment = 2

[node name="SettingsButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings ( )"
flat = true
alignment = 2

[node name="StatusButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Status (S)"
flat = true
alignment = 2

[node name="InventoryButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Inventory (I)"
flat = true
alignment = 2

[node name="MapButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Map (M)"
flat = true
alignment = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Save (V)"
flat = true
alignment = 2

[node name="LoadButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Load (L)"
flat = true
alignment = 2

[node name="QuitButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Quit (Q)"
flat = true
alignment = 2

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Menu"
icon = SubResource("GradientTexture2D_61714")
flat = true
alignment = 2
icon_alignment = 2

[node name="Settings" parent="." instance=ExtResource("2_3jbmj")]
visible = false
layout_mode = 1
offset_top = 30.0
offset_bottom = 30.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/FreecamButton" to="." method="_on_freecam_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/LogButton" to="." method="_on_log_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/StatusButton" to="." method="_on_status_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/MapButton" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
